reflective test